<resources>
    <string name="app_name">AddCardApp</string>
    <string name="crypto_wallet">Crypto wallet</string>
    <string name="man">man</string>
    <string name="notification">notification</string>
    <string name="avaliable_balance">Available balance</string>
    <string name="_45_344_45">$45,344,434,434.45</string>
    <string name="my_cards">My cards</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">add</string>
    <string name="add_new_cards">Add new cards</string>
    <string name="home_icon">home icon</string>
    <string name="home">Home</string>
    <string name="wallet_icon">wallet icon</string>
    <string name="wallet">Wallet</string>
    <string name="history_ic">History icon</string>
    <string name="history">History</string>
    <string name="market_icon">market icon</string>
    <string name="market">Market</string>
    <string name="balance">Balance</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_card_has_been_added_successfully">Your card has been added successfully</string>
    <string name="back_to_wallet">Back to wallet</string>
    <string name="cardholder_name">CARDHOLDER NAME</string>
    <string name="star">**** **** **** ****</string>
    <string name="valid_till">VALID TILL</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="cvv">CVV</string>
    <string name="add_card">Add card</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_card">Add new card</string>
</resources>