<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:background="@color/white"
    tools:context=".fragments.DashboardFragment">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/_100sdp">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_height="@dimen/_230sdp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/purple_700">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp">
                <ImageView
                    android:id="@+id/backIcon"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:src="@drawable/man"
                    android:contentDescription="@string/man"
                    />

                <TextView
                    android:id="@+id/cryptoWalletText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/crypto_wallet"
                    android:layout_centerInParent="true"
                    android:textColor="@color/whitishColor"

                    />

                <RelativeLayout
                    android:id="@+id/notiRela"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/notification"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/ic_notification_bell"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/notification"
                        tools:ignore="UnusedAttribute" />

                    <FrameLayout
                        android:id="@+id/frameLayout"
                        android:background="@drawable/circle_red"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_alignEnd="@+id/notification"
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp">

                    </FrameLayout>

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/whitishColor"
                android:text="@string/avaliable_balance"/>

            <TextView
                android:id="@+id/availableBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_22ssp"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                tools:text="@string/_45_344_45"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/white"
                android:text="@string/my_cards"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_below="@+id/linearLayout"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:id="@+id/addCardLayout"
            android:background="@drawable/dotted_box"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView android:id="@+id/addIcon"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_width="@dimen/_30sdp"
                    android:src="@drawable/ic_add"
                    android:contentDescription="@string/add" />

                <TextView
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_width="wrap_content"
                    android:text="@string/add_new_cards"/>

            </LinearLayout>



        </RelativeLayout>

    </RelativeLayout>



</androidx.core.widget.NestedScrollView>